Fix spectral library match menu item in feature table and use all selected rows